--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "lodash": ">=4.17.19",
+    "node-fetch": ">=2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
