--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "7.9.0",
+    "lodash": ">=4.17.19",
+    "node-fetch": ">=2.6.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
@@ -26,14 +28,13 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "lodash": ">=4.17.19",
-    "node-fetch": ">=2.6.1"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
