--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "expo": "~38.0.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "7.9.0",
     "lodash": ">=4.17.19",
