--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
     },
     "web": {
       "favicon": "./src/assets/images/Movix_logo.png"
-    }
+    },
+    "description": "Movix is an app where one can quickly find new movies to watch! "
   }
 }
