--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "permissions": [],
     "name": "Movix",
     "slug": "Movix",
     "version": "1.0.0",
@@ -26,7 +27,6 @@
     "description": "Movix is an app where one can quickly find new movies to watch! ",
     "android": {
       "package": "com.rubenwinant.movix"
-    },
-    "permissions": []
+    }
   }
 }
